<resources>
    <string name="app_name">SecondHand</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_jual">Jual</string>
    <string name="title_daftar_jual">Daftar Jual</string>
    <string name="title_akun">Akun</string>
    <string name="title_notifications">Notifications</string>
    <string name="masuk">Masuk</string>
    <string name="email">Email</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_di_sini">Daftar di sini</string>
    <string name="lengkapi_info_akun">Lengkapi Info Akun</string>
    <string name="nama">Nama*</string>
    <string name="selected_item">Selected item:</string>
    <string-array name="daftar_kota">
        <item>-- Pilih Kota --</item>
        <item>Semarang</item>
        <item>Bandung</item>
        <item>Jakarta</item>
        <item>Yogyakarta</item>
        <item>Makasar</item>
        <item>Lampung</item>
        <item>Surabaya</item>
        <item>Padang</item>
    </string-array>
    <string-array name="kategori">
        <item>-- Pilih Kategori --</item>
        <item>Minuman</item>
        <item>Elektronik</item>
        <item>Fashion</item>
        <item>Hobi</item>
        <item>Kendaraan</item>
    </string-array>
    <string name="label_notifikai">Notifikasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="topbottomsheet">topBottomSheet</string>
    <string name="masukan_harga_tawarmu">Masukan harga tawarmu</string>
    <string name="harga_tawaranmu_akan_diketahui_penjual_jika_penjual_cocok_kamu_akan_segera_dihubungi_penjual">Harga tawaranmu akan diketahui penjual, jika penjual cocok kamu akan segera dihubungi penjual.</string>
    <string name="barang">Barang</string>
    <string name="rp0">Rp0</string>
    <string name="harga_tawar">Harga tawar</string>
    <string name="kirim">Kirim</string>
    <string name="jam_casseo">Jam Casseo</string>
    <string name="category">category</string>
    <string name="rp_250_000">Rp 250.000</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>