<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@drawable/dialog_bg"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_top_button_bottomsheet"
        android:contentDescription="@string/topbottomsheet" />

    <com.github.captain_miao.optroundcardview.OptRoundCardView
        android:layout_height="310dp"
        android:layout_margin="20dp"
        android:layout_marginHorizontal="400dp"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:optRoundCardCornerRadius="15dp"
        app:optRoundCardElevation="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_image_product"
                android:layout_height="200dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:scaleType="fitCenter"
                android:src="@color/purple_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="15dp" />

            <TextView
                android:id="@+id/tv_nama_product"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:text="@string/jam_casseo"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_jenis_product" />

            <TextView
                android:id="@+id/tv_jenis_product"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:text="@string/category"
                android:textColor="#999999"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_image_product" />


            <TextView
                android:id="@+id/tv_harga_product"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:text="@string/rp_250_000"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nama_product" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.github.captain_miao.optroundcardview.OptRoundCardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvEdit"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        app:cardBackgroundColor="#8BC34A">

        <TextView
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDelete"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        app:cardBackgroundColor="#F44336">

        <TextView
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>

</LinearLayout>

